src/opnsense/www/css/dns-overview.css
.banner {
    width: 25%;
}

.stats-element {
    height: 5em;
    background: #f7f7f7;
    overflow: hidden;
    display: flex;
    justify-content: flex-start;
    border-radius: .3em;
    margin:auto;
    border: 1px solid rgba(217, 79, 0, 0.2);
}

.stats-icon {
    height: auto;
    width: 50%;
    object-fit:cover;
    background: #d94f0033;
    border-radius: 0 2em 2em 0 / 0 3em 3em 0;
    box-shadow: 3px 5px 1px 3px rgba(217,79,0,0.25);
}

.large-icon {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2em;
}

.stats-text {
    height: 5em;
    width: 15em;
    display: flex;
    justify-content: center;
    text-align: center;
    align-items: center;
    flex-direction: column;
}

.stats-counter-text {
    margin: 0;
    padding: 0;
    text-align: center;
    font-size: 15px;
}

.stats-inner-text {
    margin: 0;
    padding: 0;
    text-align: center;
    font-size: 15px;
}

#bannersub {
    text-align: center;
    margin: 5px;
}

.list-group {
    margin: 0px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.list-group-item {
    height: 2.5em;
}

.list-group-item-border {
    border: 1px solid #ddd;
}

.list-group-item > text {
    font-size: 35px;
}

.list-group-item-border:first-child {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-bottom: 2px solid black;
}

.list-group-item-border:last-child {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}
.btn.pull-right {
    margin-left: 3px;
}

.odd-bg {
    background: #f7f7f7;
}

.counter {
    float: right;
    color: #3c3c3b;
    font-size: 14px;
    line-height: 1.4;
}

.vertical-center {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

#maintabs > li > a {
    border: 1px solid #E5E5E5;
}

.query-success {
    background-color: #c3e6cb;
}

.query-info {
    background-color: #bee5eb;
}

.query-danger {
    background-color: #f5c6cb;
}

.query-warning {
    background-color: #ffeeba;
}

#searchFilter {
    display: inline-block;
    margin: 0 20px 0 0;
    vertical-align: middle;
}

.tag {
    font-size: 14px;
    padding: .3em .4em .4em;
    margin: 0 .1em;
}

.tag a {
  color: #bbb;
  cursor: pointer;
  opacity: 0.9;
}

.tag a {
  margin: 0 0 0 .3em;
}

.tag a fa-times {
  color: #fff;
  margin-bottom: 2px;
}

